GAP-2392: Unit test fixes for UI changes

--- a/packages/admin/src/pages/build-application/[applicationId]/components/Sections.module.scss
+++ b/packages/admin/src/pages/build-application/[applicationId]/components/Sections.module.scss
@@ -15,5 +15,5 @@
 }
 
 .table {
-    border: 1px solid govuk-colour("mid-grey");
+    outline: 1px solid govuk-colour("mid-grey");
 }
